# airdb

./: # AirDB Next Steps Plan.prompt.md  .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  QUICK_RELEASE_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMPLETE.md  RELEASE_NOTES.md  build.sh  package-lock.json  package.json  rebuild_release.sh
docs/: PLAN-install-cli-fix.md  PLAN-ui-ux-revolution.md  cli-reference.md  conflict-resolution.md  faq.md  getting-started.md  installation.md  introduction.md  migrations.md  nosql-guide.md  quickstart.md  security.md  sql-guide.md  (+2 more)
src-tauri/: Cargo.toml  WEBKIT_FIX.md  env-setup.sh  relations.json  run-dev.sh  tauri.conf.json
src-tauri/nosql/: _meta.json
src-tauri/nosql/users/: 01KGVEM40A000FYY5GZJJW0NQF.json  01KGVF2N5F000BY6VGEJP4T3E7.json  _schema.v1.json
src-tauri/nosql/users/migrations/: 001_add_email.json
src-tauri/scripts/: prep-sidecars.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audit_health.rs  autostart.rs  connections.rs  data_browser.rs  installer.rs  locks.rs  mod.rs  nosql.rs  schema_editor.rs
src-tauri/src/engine/: api.rs  cli.rs  config.rs  connections.rs  database.rs  github.rs  keystore.rs  migrations.rs  mod.rs
src-tauri/src/engine/adapter/: dialect.rs  mod.rs  sqlite.rs
src-tauri/src/engine/audit/: audit.rs  backup.rs  mod.rs
src-tauri/src/engine/autostart/: mod.rs
src-tauri/src/engine/cli/: formatter.rs  handlers.rs
src-tauri/src/engine/compatibility/: mod.rs
src-tauri/src/engine/hybrid/: airql.rs  executor.rs  mod.rs  relations.rs
src-tauri/src/engine/installer/: mod.rs  path_setup.rs
src-tauri/src/engine/locks/: mod.rs
src-tauri/src/engine/nosql/: collection.rs  document.rs  error.rs  meta.rs  migration.rs  mod.rs  query.rs  schema.rs  storage.rs
src-tauri/src/engine/observability/: dashboard.rs  metrics.rs  mod.rs
src-tauri/src/engine/platform/: mod.rs
src-tauri/src/engine/rbac/: enforcer.rs  mod.rs  policy.rs
src-tauri/src/engine/team/: branch.rs  merge.rs  mod.rs
src-tauri/src/engine/updater/: download.rs  health.rs  mod.rs  state.rs  verify.rs  version_manager.rs
src-tauri/tests/: sync_conflict_test.rs
(+48 files in other folders)
