[package]
name = "airdb"
version = "0.2.6"
description = "AirDB - Local-first, GitHub-backed database platform"
authors = ["AirDB Team"]
edition = "2021"
license = "MIT"
default-run = "airdb-desktop"

[lib]
name = "airdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "airdb-desktop"
path = "src/main.rs"

[[bin]]
name = "airdb-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "airdb-bootstrap"
path = "src/bin/bootstrap.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP Server (for REST API)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Git operations
git2 = "0.19"

# OAuth2 / HTTP client
oauth2 = "4"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Secret storage
keyring = "3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
dirs = "5"

# Crypto (for update verification)
ed25519-dalek = "2"
hex = "0.4"

# Async utilities
futures-util = "0.3"

# Archive extraction (for update downloads)
tar = "0.4"
flate2 = "1"
zip = "2"

# OpenAPI generation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# System utilities
which = "7"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
tempfile = "3.24.0"
